src/main/default/objects/Quiz_Session_Question__c/Quiz_Session_Question__c.object-meta.xml
<CustomObject>
    <label>Quiz Session Question</label>
    <nameField>
        <displayFormat>QSQ-{00000}</displayFormat>
        <label>Auto Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Session Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>