src/main/default/objects/Quiz_Session_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Quiz_Question__c</referenceTo>
    <relationshipLabel>Session</relationshipLabel>
    <relationshipName>Session</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>