src/main/default/objects/Quiz_Session_Question__c/fields/Question_Index__c.field-meta.xml
<CustomField>
    <fullName>Question_Index__c</fullName>
    <label>Question Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>